--- a/arg/beethoven.tex
+++ b/arg/beethoven.tex
@@ -172,9 +172,9 @@ Böhm &DG 439681 (1,2,4,5)\\
 
 \section{Symphony 1}
 
-Beethoven's first symphony appeared in 1801—--Symphony No. 1 in the first year of a new century. As Leonard Bernstein pointed out, it wears its Haydnish clothes until the third movement, which is an amusingly speed-ed-up minuet. It's a light, classical piece, but clearly the work of a new voice. It requires a lighter touch than the later works; the aggressive approach does not serve it well. Conductors who do well in it (as well as 2, 4, and 8) are not necessarily the best in the heavier symphonies.
+Beethoven's first symphony appeared in 1801—--Symphony No. 1 in the first year of a new century. As Leonard Bernstein pointed out, it wears its Haydnish clothes until the third movement, which is an amusingly speeded-up minuet. It's a light, classical piece, but clearly the work of a new voice. It requires a lighter touch than the later works; the aggressive approach does not serve it well. Conductors who do well in it (as well as 2, 4, and 8) are not necessarily the best in the heavier symphonies.
 
-Bernstein pretty much swept the field with his Vienna recording. It's full of high spirits and fizzy energy, with slightly weightier touches at the right times-the young Beethoven tweaking the nose of the Establishment. (One of our reviewers said, "It hits you like a ton of happy bricks".) However, Reiner, Karajan 1962, Szell, and the analog Solti (recommend-ed last time around) are almost as rewarding;
+Bernstein pretty much swept the field with his Vienna recording. It's full of high spirits and fizzy energy, with slightly weightier touches at the right times-the young Beethoven tweaking the nose of the Establishment. (One of our reviewers said, ``It hits you like a ton of happy bricks''.) However, Reiner, Karajan 1962, Szell, and the analog Solti (recommend-ed last time around) are almost as rewarding;
 Monteux and Jochum are more poised. We found Dohnanyi and Leibowitz earthbound.
 Ormandy gives it more body and substance than usual. Sawallisch has the Concertgebouw Orchestra, but his lumpen approach doesn't say much with it or the music. This work is also the least strain for the period groups, so Hogwood, Norrington, and Brüggen all turn in credible but rather mechanical performances.
 
@@ -182,6 +182,166 @@ Ormandy gives it more body and substance than usual. Sawallisch has the Concertg
 Bernstein &DG \\
 Szell& Sony 89838 (+6)\\
 Monteux& Decca 440627 (+3,6,8)
+\endrectable
+
+\section{Symphony 2}
+
+The First and Second are often lumped together as early Haydnish works, but \No2 really is more expansive and more ambitious; it bridges the gap between the classical First and the truly Beethovenian Third. Bernstein (Vienna) approaches the work as a foretaste of the Eroica and whips up lots of confident youthful energy tempered with lyricism.
+Beecham is special: charming, witty, warm---Beethoven as Schubert. It's just the sort of thing he excelled at-finding wonderful things in a work that many other conductors over-looked. Walter is genial and charming, too; and Böhm is exciting without rigid tempos or effects-mongering. Ormandy had plenty of energy and "snap"; the orchestra is amazing.
+Karajan 1962 is fluent and almost relaxed sometimes-an underrated performance.
+Wand (coupled with 1) has almost as much energy and enthusiasm as Toscanini, and the playing is alert, but we wonder if Wand isn't a little too hard for this music. Leibowitz (Chesky) has the energy and great clarity plus even better sound.
+
+\startrectable
+Bernstein & DG\\
+Beecham & EMI\\
+Walter & Sony 64460 (+1)\\
+Böhm & DG 439681 (+1,4,5)\\
+Leibowitz & Chesky 17 (+5)
+\endrectable
+
+\section{Symphony 3}
+
+The Third is the first fully mature Beethoven symphony. Much is made of its length being nearly twice that of the average Haydn symphony—an exaggeration if you consider that Haydn's London symphonies run 25-30 minutes and the average Eroica comes in around 45. If you take every single possible repeat, Mozart's last two symphonies can be bloated up to about the same length, too. The difference in the Eroica is the length of the musical ideas and the complexity of their working-out.
+
+Szell's Third is one of the best-bracing and swift but not rushed. Walter is expansive and Apollonian—a high point of his set. Bernstein takes the Funeral March dangerously slow, but it works, and the rest of the performance has a grandeur and warmth that makes Klemperer and Karajan sound cold in compar-ison. You'll get the Vienna Philharmonic with Böhm, too, and it's one of the best examples of a "mainstream" approach. Böhm also recorded it in Berlin: less stark, more blended sound (also DG). On paper, Sawallisch should have been as good, but it turns out to be a plodding, high-cholesterol trudge. Giulini's earlier DG traversal is long-breathed and expansive, but the Los Angeles orchestra is a bit too generic sounding. His later Sony lasts nearly a full hour---too long---and no matter how beautifully the La Scala orchestra plays they can't sustain the tempos.
+
+Peter Tiboris (Elysium) uses Mahler's retouchings of the orchestration to make it more suitable for large halls; interesting, witha cataclysmic Funeral March, but not vital.
+Stokowski (RCA) is rather "straight" but inconsistent: a vigorous I, followed by a II lacking drive, but a propulsive finale. The recently reissued Kempe (Testament) has a massive, powerful, broadlypaced I. Like Böhm and Szell, he keeps a steady hand on the tempos, and the rest of the performance has incisive playing and firm rhythm. Boult takes a similar approach (Vanguard, with 5, 6, 7, overtures) with clean, organized lines and polished phrasing; the essential drama is never lacking, and tempos feel right, like Monteux and Reiner. The Dohnanyi on Telarc is gorgeously played and recorded, moves right along but can also be big and brash where it matters.
+
+\startrectable
+Bernstein & DG\\
+Böhm & DG 437368 (+9)\\
+Szell & Sony 89832 or 46328\\
+Walter & ..Sony 64461 (+8)\\
+Dohnanyi &Telarc 80090\\
+Kempe & Testament 1270
+\endrectable
+
+\section{Symphony 4}
+
+The Fourth seems light-a throwback to
+Hayan after the weighty Eroica. 
+course, it's not a retrograde move, but the guffawing high spirits of its fast movement require a lighter touch, like the First, and the sighing lyricism of its slow movement benefit from a light, warm approach. Our reviewers have never agreed on recommendations.
+
+Bernstein's New York recording is vibrant witty, and gorgeous, but of course the Vienna is more relaxed and consistent-and better recorded. The 1972 Karajan is the next runner-up, but the 1962 is nearly as good. Szell played Haydn brilliantly, so it's no wonder that he excels in this symphony. If you want a weightier approach that emphasizes kinship with 3 and 5, Carlos Kleiber (Orfeo) and Masur may be your choices. Haitink (Philips), Krips and Ormandy hew closer to that approach, while Steinberg and Schmidt-Isserstedt are crisper and faster. Marriner's lovely account (Philips) was the high point of his otherwise pedestrian
+Beethoven set, and many of us love the Walter.
+The Editor adds Leinsdorf to the list.
+
+\startrectable
+Bernstein& DG 463468 (+6,9)\\
+Karajan & DG\\
+Kleiber & Orfeo 100841\\
+Walter & Sony 64462 (+6)\\
+Krips & Everest 9102 (+7)
+\endrectable
+
+\section{Symphony 5}
+
+The Fifth is so familiar a conductor has to
+be able to make us listen to it with fresh ears. When one does, we realize it breaks different ground from the Eroica. Drive and focus are what a conductor needs here; the piece has almost no melodies. It consists of short themes that are rigorously, even obsessively worked The uncompromising, exciting Kleiber
+(DG) seems to be the top of the heap, but Philip Haldeman speaks for a few of us when he says Reiner's Fifth is the best ever recorded, with nearly super-human playing, propulsion of tempo, and energy without short-changing expressive detail. Szell's hectic Cleveland recording is not a high point of the set, but his later one with the Amsterdam Concertgebouw (Philips or MHS) is treasurable; it has focus
+and energy but also grandeur. Walter is noble and songful, with delicious details but weak in drive and energy. Ormandy is moderate and direct: the music pure and simple. We all feel Solti misses the mark, but his best recording of this was his last one, in Vienna.
+
+I have to break my rule about banishing monaural releases to recommend the Vienna Furtwängler. It is simply the most powerful, noblest, most majestic Fifth ever, and, owing to the unusually broad dynamic range of EMI's recording, it doesn't sound faded at all. Rattle
+(EMI) is a high-voltage affair with lots of stress
+and anger, heavy on clarity and rhythmic
+strength. The Vienna Philharmonic is pushed
+and the
+to sound much too aggressive, and even the
+slow movement lacks geniality. (Rattle has
+redone this with the same orchestra---review
+next issue.) Thielemann (DG) is weighted
+vibrant, down by heavy-handed pomp in slow sections,
+though his other tempos are better judged.
+Our reviewer liked it, but with lots of quibbles.
+Zander (Telarc) has lickety-split tempos-an-
+other conductor trying to observe Beethoven's
+metronome markings. It's good for listeners
+with short attention spans.
+
+\startrectable
+Kleiber & DG 447400 (+7)\\
+Reiner & RCA 68976\\
+Szell (Amsterdam)&  Philips 464682 or MHS
+\endrectable
+
+\section{Symphony 6}
+
+After the rigors of the Fifth, another surprise: a Pastoral, nature symphony. It's not really program music, because it doesn't tell any sort of narrative story, but it is a remarkable accomplishment of painting nature in sound. Unlike the driven, melody-less Fifth, it is full of warm, flowing tunes.
+Walter is just about the best all around---warm, glowing, flowing---so right that you could almost get by with his recording alone.
+Monteux comes strikingly close, as do Böhm and Klemperer. Reiner is also warm and beautiful quite a surprise, given his affinity for the
+Fifth and Seventh. Gerald Fox found Bernstein's New York recording ``wonderful'', with pastoral woodwinds, sweet strings, and no interpretive distortions; but the Vienna version seems, again, even finer---especially the Brucknerian grandeur of the finale. This is the performance that taught me to really love this work.
+
+\startrectable
+Walter & Sony 64462 (+4)\\
+Reiner & RCA\\
+Monteux  & Decca\\
+Bernstein & DG 431025\\
+Böhm &DG 437928 (+7,8) or 447433
+\endrectable
+
+\section{Symphony 7}
+
+Wagner did this symphony no favors by calling it the ``Apotheosis of the Dance'' (yes, ballet companies have staged it). It is actually a return to the rigors of the Fifth, tempered by good humor, despite another funeral march (though not so labeled) in the second movement.
+
+Again, Carlos Kleiber is nearly definitive; at least it's a performance that many different kinds of listeners seem to enjoy. It is fast. Karajan's Vienna recording (Decca) is probably his best (it breathes), though the 1970s DG comes close (1962 DG is fine, too). Reiner's 7th is almost as exciting as his 5th; the finale seems as near to orchestral perfection as mortals can get (the interplay between the first and second violins is thrilling at that speed). Steinberg (EMI) has a following; our reviewer thought it a pleasure, with opening chords that have a real ``crunch'' leading to a first movement that is
+``so inevitable you can't imagine the piece going any other way''. The Editor still responds strongly to Leinsdorf's Viennese reading on RCA. Beecham seems less driven and happier than most, but he is among the fastest and gets through the whole thing in 26 minutes. Böhm is still the antidote for those who don't like breathless Sevenths, but Walter seems a better compromise between openness and expeditiousness, and it's one of the high points of his set. Colin Davis is the choice if you want to get through the work as quickly as possible. Muti offered some Reiner-like precision and inevitability in an underrated performance.
+
+\startrectable
+Kleiber & DG 447400 (+5)\\
+Reiner & RCA\\
+Karajan & DG\\
+Walter & Sony 64463 (+5)\\
+Beecham & EMI
+\endrectable
+
+\section{Symphony 8}
+
+The pattern of rigor and relaxation continues, with the Eighth a relaxing, rustic interlude between the striving Seventh and the monumental Ninth. It's anything but a throwback to Haydn, though, or even the Beethoven of the First. There was little consensus in our last overview, and I found no more guidance in later reviews.
+For an all-around balance of polish and high spirits, Monteux (Decca) may be our man---but to the Editor he is too energetic and doesn't ``float''---that is, he is not genial enough for this genial music.
+Some older critics like Scherchen, but he is so fast! (exciting, too). Most of us hate the Dohnanyi. Ormandy is less pushy and beautifully played, but I've got to stick with my preferences for Munch (RCA) and the large-scale but un-cumbersome analog Solti (Decca).
+Karajan, Bernstein, Haitink, Szell, and Walter are all fine, too; and again Steinberg finds favor in some quarters, but only the most recent EMI remastering.
+
+\startrectable
+Monteux & Decca\\
+Solti  & Decca 417765\\
+Ormandy & Sony 63266 (+5,7)
+\endrectable
+
+\section{Symphony 9}
+
+After completing eight symphonies, Beethoven reached the limits of expression for instrumental music and resorted to the human voice in the finale of his symphony.
+Schiller's text is, frankly, padded with truisms, but Beethoven affixed it to one of the world's greatest musical utterances. I've never heard of a conductor of any experience who has not performed it, but I suppose there have been some. Almost any conductor will jump at a chance to record it.
+
+There are many the recordings, but none I've heard completely lives up to the music's potential, with one exception ("no-mono" rule about to be broken again): Furtwängler's 1954 Lucerne Festival account on Tahra. As in his Vienna Fifth, Furtwängler seems to get closer to the work's inner meaning than any other, and Tahra's clear, full-range sound makes it preferable even to his 1951 Bayreuth performance (EMI) that is on everybody's top Ninths list. Paul Althouse observed that in the Bayreuth account, Furtwängler ``leads you though the Dark Valley and makes you think''. Entirely true, but III and IV have too many slack moments, which are entirely absent from the Lucerne. Now let's return to our regular stereo listings.
+
+The 1962 Karajan is first rate, with a great solo quartet. I'm probably quibbling, but again, I prefer the later 1970s release for its greater introspection and even more polished orchestral execution. Böhm recorded the Ninth in Vienna and Berlin; the problem is he's just a bit too slow. The forward thrusting but flexible Abbado (Sony) has good soloists and a textual clarity that equals the best of the period-instrument performances, but is that necessarily a virtue? Herreweghe's period affair (Harmonia Mundi) is way too fast, beyond the pale,
+just driven too hard---and inexpressive.
+One of our writers says "People have been shot for less than what Norrington did to this piece''. You have to be very, very tired of Beethoven's romanticism to find Norrington bracing. If you want period instruments and practices, Hogwood (Decca) is the most palatable.
+
+Leinsdorf (RCA) is vigorous and straight-forward, with no odd mannerisms, but not much emotional depth. The orchestral tone isn't very lush, either; our reviewer called it a
+``clinical dissection'' of the score. Muti (EMI) is noble, powerful, expressive, and satisfying with full-bodied orchestral playing and sens: ble tempos. Ormandy (Sony), on the other hand, offers up something much different with the same orchestra: rich, smooth, thick, almost fuzzy orchestral tone. It's an antidote to angry  Previn (RCA) a straightforward, cogent, mainstream accoun with great sound. Paul Althouse said the cho rus in the Szell ``sounds like a thousand wild animals who have gone too long without a meal. They grab the piece and sing the bejesus out of it.'' The singing is exciting, and the performance is a classic example of a swift forceful Ninth---one of the high points o Szell's set. Reiner (RCA) is very similar, though the Chicago Symphony is a little richer in tone. If you want something a little juicier and warmer but still in the Toscanini-precision mold, Munch (RCA) is your man. Another conductor who avoids the bloating this work often suffers from is Dohnanyi. He is always moderate; he moves right along. That helps in IV, but some of us feel the Adagio is too fast. Gorgeous sound and incredible playing.
+
+Giulini (EMI) never really seems to get
+started; Walter (Sony) and Klemperer (EMI)
+seem endless-bloated, cumbersome traversals. The physical demands of the work were
+beyond what they could handle at such late
+stages in their careers. Stokowski (Decca) is
+also caught too late in his career, in an uncharacteristically detached performance. Jochum
+(EMI) offers a pleasantly polished account
+with emphasis in all the right places. So does Ferencsik, though in common with Szell, hes
+too reserved in the slow movement. Macal
+(Koss) is tidy, with beautiful playing from the
+Milwaukee Symphony, but he insists on mal find
+ing the music stiff and rigid.
+
+\startrectable
+Furtwängler & Tahra 1003\\
+Karajan & DG 447401\\
+Dohnanyi &Telarc 80120\\
+Muti & Seraphim 73284\\
+Reiner & RCA \\
+Szell & Sony 60987
 \endrectable
 
 \end{document}
