--- a/arg/beethoven.tex
+++ b/arg/beethoven.tex
@@ -85,7 +85,7 @@ The music is full of great intellectual struggles invested with almost superhuma
 Despite its emotional range, Beethoven can sound angry and domineering. Many conductors overemphasize the music's unrelenting side and make it harsh, overbearing, emotionally monochromatic. As our Editor said in our last Beethoven Overview, ``That may be the very reason many Americans enjoy it...This is hard-hitting music; it snarls at us the way we snarl at each other...Beethoven wasn't angry 30 or 35 [40 or 45, now] years ago. He even had a certain charm. Our social life has changed the way we play Beethoven. We are not genial people, and neither is our Beethoven.'' Although most Beethoven recordings are made in Europe, the world is becoming increasingly Americanized. As much they may resent American cultural hegemony, Europeans are getting more like us in order to compete with us. Many of the recordings that ARG critics prefer are older, more genial ones.
 Maybe that's why few American conductors figure in the recommendations below.
 
-Conductors who were active in the early part of the 20th Century were products of a romantic sensibility that also valued depth of expression, warmth, tonal beauty, and plasticity in phrasing. So many of our preferred recordings are by conductors who were quit elderly when they made them. Fortunately
+Conductors who were active in the early part of the 20th Century were products of a romantic sensibility that also valued depth of expression, warmth, tonal beauty, and plasticity in phrasing. So many of our preferred recordings are by conductors who were quite elderly when they made them. Fortunately
 they lived long enough to commit their interpretations to tape in full-range, high-fidelity stereo sound (Furtwängler and Toscanini ai notable exceptions). Youth generally is superficial, which is why there should probably be minimum age limit for committing Beethoven to disc (say 45 or 50?). Young conductors have given us good Beethoven recordings, but few great ones. Great Beethoven interpretations require maturity and practical experience, as well as a sense for the music's deeper levels. A conductor has to live with Beethoven---and the ups and downs of his own life---to grasp, music's inner meaning. Some never get it. This is true with many composers, but more so with Beethoven, perhaps owing to his position as first among equals in the Composer's Pantheon. Young conductors like to show they're hotshots, so they slam through the music demonstrate how they can master it and mi handle it. Some of them are also trying to compete with Toscanini, whose performance became harder and faster as he grew old:
 Toscanini also may have been trying to prove he wasn't getting old and losing his ``edge'', another obsession of contemporary culture.
 
