--- a/arg/beethoven.tex
+++ b/arg/beethoven.tex
@@ -86,17 +86,17 @@ Despite its emotional range, Beethoven can sound angry and domineering. Many con
 Maybe that's why few American conductors figure in the recommendations below.
 
 Conductors who were active in the early part of the 20th Century were products of a romantic sensibility that also valued depth of expression, warmth, tonal beauty, and plasticity in phrasing. So many of our preferred recordings are by conductors who were quite elderly when they made them. Fortunately
-they lived long enough to commit their interpretations to tape in full-range, high-fidelity stereo sound (Furtwängler and Toscanini ai notable exceptions). Youth generally is superficial, which is why there should probably be minimum age limit for committing Beethoven to disc (say 45 or 50?). Young conductors have given us good Beethoven recordings, but few great ones. Great Beethoven interpretations require maturity and practical experience, as well as a sense for the music's deeper levels. A conductor has to live with Beethoven---and the ups and downs of his own life---to grasp, music's inner meaning. Some never get it. This is true with many composers, but more so with Beethoven, perhaps owing to his position as first among equals in the Composer's Pantheon. Young conductors like to show they're hotshots, so they slam through the music demonstrate how they can master it and mi handle it. Some of them are also trying to compete with Toscanini, whose performance became harder and faster as he grew old:
+they lived long enough to commit their interpretations to tape in full-range, high-fidelity stereo sound (Furtwängler and Toscanini are notable exceptions). Youth generally is superficial, which is why there should probably be minimum age limit for committing Beethoven to disc (say 45 or 50?). Young conductors have given us good Beethoven recordings, but few great ones. Great Beethoven interpretations require maturity and practical experience, as well as a sense for the music's deeper levels. A conductor has to live with Beethoven---and the ups and downs of his own life---to grasp, music's inner meaning. Some never get it. This is true with many composers, but more so with Beethoven, perhaps owing to his position as first among equals in the Composer's Pantheon. Young conductors like to show they're hotshots, so they slam through the music demonstrate how they can master it and mi handle it. Some of them are also trying to compete with Toscanini, whose performance became harder and faster as he grew old:
 Toscanini also may have been trying to prove he wasn't getting old and losing his ``edge'', another obsession of contemporary culture.
 
 Another modern obsession: ``historical authenticity''. Don't be gulled by the historical reconstructionist (``period instrument'') faction's claims that Beethoven shouldn't be
-``interpreted'' (another Toscanini legacy). Over the years, we've reviewed many performances that were mechanical, expressionless, and devoid of feeling (some of them breathlessly trying to observe Beethoven's impossible metronome markings). They're mostly historical curiosities-not uninteresting in themselves but, like going to a Civil War battle reenactment or Colonial Williamsburg, no place to live permanently.
+``interpreted'' (another Toscanini legacy). Over the years, we've reviewed many performances that were mechanical, expressionless, and devoid of feeling (some of them breathlessly trying to observe Beethoven's impossible metronome markings). They're mostly historical curiosities---not uninteresting in themselves but, like going to a Civil War battle reenactment or Colonial Williamsburg, no place to live permanently.
 
 It's been eight years since our last Beethoven overview, but his part of the catalog seems to have been pretty stable. Most of the classic recordings are from the pre-digital era, about 25 years old or more, and most have made it to CD. We've tended to rate even the best of what has been done since ``almost as good as'' rather than ``trample your mother to get at one of these''.
 That's hardly the case with Mahler or Bruckner, Shostakovich, Tchaikovsky, Rachmaninoff. Maybe we're just living through a fallow period in Beethoven interpretation.
 
 Even so, there are so many recordings that I had to set some ground rules. I decided to limit the recommendations to releases with high-quality stereo sound; it's painful, but I'm leaving out classic but monophonic or pre-high fidelity stuff. The goal here is to recommend a manageable group of all-around first-rate recordings that can form the cornerstone of a beginning collector's Beethoven library.
-That also rules out unusual, eccentric, or otherwise "different" performances. We're looking for strong, solid, compelling interpretations that will yield as much reward on the 50th or 500th listening as the first.
+That also rules out unusual, eccentric, or otherwise ``different'' performances. We're looking for strong, solid, compelling interpretations that will yield as much reward on the 50th or 500th listening as the first.
 
 I've also leaned toward recordings that are available (or likely to be again) at a local record store or on-line retailer. This does leave out some good-sounding but obscure-label items.
 Releases come and go from the catalog with such bewildering swiftness, and it's impossible o tell you exactly what's ``available'' at any given moment. If a record company is not currently offering a release, plenty of may still be in the pipeline, on dealers' shelves
@@ -135,25 +135,25 @@ Giulini recorded 3, 5, and 6 in Los Angeles (DG)---good middle-of-the road, slig
 Karajan made four sets, and the 1962 Berlin set (DG) belongs in the same top-recommendation league as Bernstein and Böhm The performances have power and intensity they are speedy but not forced, and the orchestra plays beautifully. They play even more beautifully in the harder-to-find 1972 set, and Karajan's interpretations have deepened, but the softer sonics may not appeal to all. Karajan's early EMI set with the Philharmonia is scrappy, hasty, and incompletely thought out!
 The final Berlin one from the 1980s (DG) shows a great artist in sad decline.
 
-The Klemperer (EMI) is a landmark from the early stereo era. The performances are slow, controlled, and granitic, with a tremen: dous sense of architecture, like building® cathedral or Greek temple very slowly, on stone at a time. The style fits some of the sy phonies better than others (4 and 6 work be 7 and 9 fail to cohere). Konwitschny (Berling reminiscent of Klemperer and, to a lesse extent, Böhm in the tempos of his stel! implacable, muscular, unyielding, but pole fully effective, classically structured interpret tions. His inflexible Germanic rhythmic pi may not appeal to all.
+The Klemperer (EMI) is a landmark from the early stereo era. The performances are slow, controlled, and granitic, with a tremendous sense of architecture, like building cathedral or Greek temple very slowly, one stone at a time. The style fits some of the symphonies better than others (4 and 6 work be 7 and 9 fail to cohere). Konwitschny (Berling reminiscent of Klemperer and, to a lesser extent, Böhm in the tempos of his steely, implacable, muscular, unyielding, but powerfully effective, classically structured interpretations. His inflexible Germanic rhythmic pulse may not appeal to all.
 
 The refurbished CD sound of the Krips (Everest) is very fine, but the orchestral tone nothing special. The interpretations are sober and steady but somewhat superficial. John McKelvey finds them smoother and less angular than Ferencsik, while Editor Vroon feels the tempos are similar to Szell but the more relaxed rhythms create softer edges. This was a reasonable contender when it came out in the early 1960s and there was less competition; approach with caution. Masur (Philips) offers straightforward, detailed, well-played renderings with sensibly chosen tempos, but it's hard to warm up to it. Böhm has the same ineluctable, monolithic quality but more imaginative interpretations and slightly better sound.
 
-Pierre Monteux recorded 1-8 for Decca (9, for some reason, for Westminster) in the late 1950s with the London Symphony and Vienna Philharmonic. Both orchestras play gorgeous-ly, and these are wonderfully polished, firm, musical interpretations. So far, only 1, 3, 6, and 8 seem to have made it to CD. Less genial, the Leibowitz (Chesky) is fast and propulsive-some would call it ``driven''--—in the Toscanini mold, but with fine stereo sound. They are exciting, but not particularly perceptive. Leinsdorf (RCA) is often humorless, too. His set was overshadowed when it was
+Pierre Monteux recorded 1-8 for Decca (9, for some reason, for Westminster) in the late 1950s with the London Symphony and Vienna Philharmonic. Both orchestras play gorgeously, and these are wonderfully polished, firm, musical interpretations. So far, only 1, 3, 6, and 8 seem to have made it to CD. Less genial, the Leibowitz (Chesky) is fast and propulsive-some would call it ``driven''--—in the Toscanini mold, but with fine stereo sound. They are exciting, but not particularly perceptive. Leinsdorf (RCA) is often humorless, too. His set was overshadowed when it was
 stands up well now, but it often seems to skim the surface.
 The Boston Symphony plays well,
 but the performances are often merely facile and rarely moving.
 The Muti (EMI), made in Philadelphia in the 1980s, is a fine all-around group of interpretations. Some of them have been reissued on ultra-cheap Seraphim discs. The performances range from an exciting but bland Eroica to a memorable Ninth. Toscanini---Leibowitz speed and drive are there, but Muti also knows when the music has to slow down. The orchestra plays with a much leaner (but still burnished) sound than it did for Ormandy.
 Ormandy (Sony) is in a class by himself---Beethoven for sound sensualists. The orchestra is in peak form, and Ormandy makes Beethoven less angry, pushy, or aggressive than just about anybody. Our Editor loves 1, 2, 4, and 9 and says 5 and 8 may be ``the best ever''; tempos are moderate but not draggy.
 
-Reiner (RCA) never recorded an integral set, but many of us would not want to do without the Chicago recordings he left us (1, 5, 6, 7, and 9 in stereo, a monaural 3): precision with power and fire. 5, 6, and 7 are among the best on disc. Solti recorded the symphonies twice (Decca) with the same orchestra. The earlier analog group from the 1970s is better, but on records at least Solti never "got" the 5th or the 9th. The performances are impulsive, pungent, and dramatic-hardly "rock solid" and "gran-
-His late 1950s Vienna recordings of 3, 5 and 7 are less punchy and driven. Szell's (Sony) set is a perennial in the catalog, despite a weak Fifth,
+Reiner (RCA) never recorded an integral set, but many of us would not want to do without the Chicago recordings he left us (1, 5, 6, 7, and 9 in stereo, a monaural 3): precision with power and fire. 5, 6, and 7 are among the best on disc. Solti recorded the symphonies twice (Decca) with the same orchestra. The earlier analog group from the 1970s is better, but on records at least Solti never ``got'' the 5th or the 9th. The performances are impulsive, pungent, and dramatic---hardly ``rock solid'' and ``granitic''. His late 1950s Vienna recordings of 3, 5 and 7 are less punchy and driven. Szell's (Sony) set is a perennial in the catalog, despite a weak Fifth,
 and the performances are energetic and exciting. If you like the more relaxed approaches of Walter, Böhm, or Ormandy, Szell's approach may seem too punchy and driven. He could be more relaxed with other orchestras (maybe he felt under pressure to
 ``play it straight'' for posterity in Cleveland), but 1, 3, 4, and 9 are hard to beat.
 
-Bruno Walter (Sony) recorded his stereo set with a pickup orchestra late in life, after age and infirmity had taken their toll. Neverthe-less, it is one of the warmest and most genial of sets. There are slack moments, and the Ninth is almost a complete loss, but the Sixth is one of the best ever, and our Editor dearly loves Walter's Eroica. You can cover the poles of Beethoven interpretation by having both Szell and Walter.
+Bruno Walter (Sony) recorded his stereo set with a pickup orchestra late in life, after age and infirmity had taken their toll. Nevertheless, it is one of the warmest and most genial of sets. There are slack moments, and the Ninth is almost a complete loss, but the Sixth is one of the best ever, and our Editor dearly loves Walter's Eroica. You can cover the poles of Beethoven interpretation by having both Szell and Walter.
 
-Wand was seems cold and uninviting, though there are no significant disqualifying characteristics, but should Beethoven be this unimaginative and humorless? Speaking of unimaginative, Zinman's (Arte Nova) came out on separate discs, but its chier selling point is the new Barenreitner Urtext scores its uses (since recorded by others, including Abbado) and the conductor's attempt to adhere strictly to Beethoven's metronome markings. The speed can be breathtaking, but the performances are often stiff, charmless, and mechanical-and they prove that those metronome markings, however Beethoven arrived at them, simply don't work.
+Wand was seems cold and uninviting, though there are no significant disqualifying characteristics, but should Beethoven be this unimaginative and humorless? Speaking of unimaginative, Zinman's (Arte Nova) came out on separate discs, but its chief selling point is the new Barenreitner {\it Urtext} scores it uses (since recorded by others, including Abbado) and the conductor's attempt to adhere strictly to Beethoven's metronome markings. The speed can be breathtaking, but the performances are often stiff, charmless, and mechanical---and they prove that those metronome markings, however Beethoven arrived at them, simply don't work.
+
 The new Simon Rattle set (with the Vienna Philharmonic) arrived just past our deadline; we will have a review in the next issue.
 
 There have been period-instrument sets by Goodman (Nimbus), Hogwood (Decca), and Norrington (EMI), but after a flurry of interest when they first came out, they seem not to have worn well. Hogwood has the best sound and is more straightforward and less eccentric than Norrington. It's probably the best bet in this category, unless eccentricity and capriciousness appeal to you.
@@ -203,7 +203,7 @@ Leibowitz & Chesky 17 (+5)
 
 The Third is the first fully mature Beethoven symphony. Much is made of its length being nearly twice that of the average Haydn symphony—an exaggeration if you consider that Haydn's London symphonies run 25-30 minutes and the average Eroica comes in around 45. If you take every single possible repeat, Mozart's last two symphonies can be bloated up to about the same length, too. The difference in the Eroica is the length of the musical ideas and the complexity of their working-out.
 
-Szell's Third is one of the best-bracing and swift but not rushed. Walter is expansive and Apollonian—a high point of his set. Bernstein takes the Funeral March dangerously slow, but it works, and the rest of the performance has a grandeur and warmth that makes Klemperer and Karajan sound cold in compar-ison. You'll get the Vienna Philharmonic with Böhm, too, and it's one of the best examples of a "mainstream" approach. Böhm also recorded it in Berlin: less stark, more blended sound (also DG). On paper, Sawallisch should have been as good, but it turns out to be a plodding, high-cholesterol trudge. Giulini's earlier DG traversal is long-breathed and expansive, but the Los Angeles orchestra is a bit too generic sounding. His later Sony lasts nearly a full hour---too long---and no matter how beautifully the La Scala orchestra plays they can't sustain the tempos.
+Szell's Third is one of the best---bracing and swift but not rushed. Walter is expansive and Apollonian—a high point of his set. Bernstein takes the Funeral March dangerously slow, but it works, and the rest of the performance has a grandeur and warmth that makes Klemperer and Karajan sound cold in comparison. You'll get the Vienna Philharmonic with Böhm, too, and it's one of the best examples of a ``mainstream'' approach. Böhm also recorded it in Berlin: less stark, more blended sound (also DG). On paper, Sawallisch should have been as good, but it turns out to be a plodding, high-cholesterol trudge. Giulini's earlier DG traversal is long-breathed and expansive, but the Los Angeles orchestra is a bit too generic sounding. His later Sony lasts nearly a full hour---too long---and no matter how beautifully the La Scala orchestra plays they can't sustain the tempos.
 
 Peter Tiboris (Elysium) uses Mahler's retouchings of the orchestration to make it more suitable for large halls; interesting, witha cataclysmic Funeral March, but not vital.
 Stokowski (RCA) is rather "straight" but inconsistent: a vigorous I, followed by a II lacking drive, but a propulsive finale. The recently reissued Kempe (Testament) has a massive, powerful, broadlypaced I. Like Böhm and Szell, he keeps a steady hand on the tempos, and the rest of the performance has incisive playing and firm rhythm. Boult takes a similar approach (Vanguard, with 5, 6, 7, overtures) with clean, organized lines and polished phrasing; the essential drama is never lacking, and tempos feel right, like Monteux and Reiner. The Dohnanyi on Telarc is gorgeously played and recorded, moves right along but can also be big and brash where it matters.
@@ -212,7 +212,7 @@ Stokowski (RCA) is rather "straight" but inconsistent: a vigorous I, followed by
 Bernstein & DG\\
 Böhm & DG 437368 (+9)\\
 Szell & Sony 89832 or 46328\\
-Walter & ..Sony 64461 (+8)\\
+Walter & Sony 64461 (+8)\\
 Dohnanyi &Telarc 80090\\
 Kempe & Testament 1270
 \endrectable
@@ -254,8 +254,7 @@ next issue.) Thielemann (DG) is weighted
 vibrant, down by heavy-handed pomp in slow sections,
 though his other tempos are better judged.
 Our reviewer liked it, but with lots of quibbles.
-Zander (Telarc) has lickety-split tempos-an-
-other conductor trying to observe Beethoven's
+Zander (Telarc) has lickety-split tempos---another conductor trying to observe Beethoven's
 metronome markings. It's good for listeners
 with short attention spans.
 
@@ -313,7 +312,7 @@ Ormandy & Sony 63266 (+5,7)
 After completing eight symphonies, Beethoven reached the limits of expression for instrumental music and resorted to the human voice in the finale of his symphony.
 Schiller's text is, frankly, padded with truisms, but Beethoven affixed it to one of the world's greatest musical utterances. I've never heard of a conductor of any experience who has not performed it, but I suppose there have been some. Almost any conductor will jump at a chance to record it.
 
-There are many the recordings, but none I've heard completely lives up to the music's potential, with one exception ("no-mono" rule about to be broken again): Furtwängler's 1954 Lucerne Festival account on Tahra. As in his Vienna Fifth, Furtwängler seems to get closer to the work's inner meaning than any other, and Tahra's clear, full-range sound makes it preferable even to his 1951 Bayreuth performance (EMI) that is on everybody's top Ninths list. Paul Althouse observed that in the Bayreuth account, Furtwängler ``leads you though the Dark Valley and makes you think''. Entirely true, but III and IV have too many slack moments, which are entirely absent from the Lucerne. Now let's return to our regular stereo listings.
+There are many the recordings, but none I've heard completely lives up to the music's potential, with one exception (``no-mono'' rule about to be broken again): Furtwängler's 1954 Lucerne Festival account on Tahra. As in his Vienna Fifth, Furtwängler seems to get closer to the work's inner meaning than any other, and Tahra's clear, full-range sound makes it preferable even to his 1951 Bayreuth performance (EMI) that is on everybody's top Ninths list. Paul Althouse observed that in the Bayreuth account, Furtwängler ``leads you though the Dark Valley and makes you think''. Entirely true, but III and IV have too many slack moments, which are entirely absent from the Lucerne. Now let's return to our regular stereo listings.
 
 The 1962 Karajan is first rate, with a great solo quartet. I'm probably quibbling, but again, I prefer the later 1970s release for its greater introspection and even more polished orchestral execution. Böhm recorded the Ninth in Vienna and Berlin; the problem is he's just a bit too slow. The forward thrusting but flexible Abbado (Sony) has good soloists and a textual clarity that equals the best of the period-instrument performances, but is that necessarily a virtue? Herreweghe's period affair (Harmonia Mundi) is way too fast, beyond the pale,
 just driven too hard---and inexpressive.
@@ -324,7 +323,7 @@ Leinsdorf (RCA) is vigorous and straight-forward, with no odd mannerisms, but no
 
 Giulini (EMI) never really seems to get
 started; Walter (Sony) and Klemperer (EMI)
-seem endless-bloated, cumbersome traversals. The physical demands of the work were
+seem endless---bloated, cumbersome traversals. The physical demands of the work were
 beyond what they could handle at such late
 stages in their careers. Stokowski (Decca) is
 also caught too late in his career, in an uncharacteristically detached performance. Jochum
